# Chatbox

./: README.md
Chatbox1.0/: server.py  聊天室.html
Chatbox2.0/: chat.proto  chat_pb2.py  server.py  text.py  聊天室.html
Chatbox4.0/: chat.js  file_server.py  ping机制.xmind  styles.css  text.js  聊天室.html
Chatbox4.0/wasm-crypto/src/: main.rs
Chatbox5.0/: README.md  requirements.txt  text.py
Chatbox5.0/backend/: chat_pb2.py  file_server.py  requirements.txt  server.py
Chatbox5.0/backend/dj_chat/: db.sqlite3  manage.py
Chatbox5.0/backend/dj_chat/dj_chat/: asgi.py  settings.py  urls.py  wsgi.py
Chatbox5.0/backend/dj_chat/myapp/: admin.py  models.py  urls.py  views.py
Chatbox5.0/backend/dj_chat/myapp/management/commands/: create_user_profiles.py  create_user_settings.py  migrate_avatars.py
Chatbox5.0/backend/dj_chat/myapp/migrations/: 0001_initial.py  0002_chatmessage_delete_message_and_more.py  0003_usersettings.py  0004_userprofile.py  0005_alter_usersettings_dark_mode.py  0006_userprofile_avatar.py  0007_remove_userprofile_avatar_userprofile_avatar_data_and_more.py
Chatbox5.0/frontend/css/: style.css  styles.css
Chatbox5.0/frontend/html/: index.html
Chatbox5.0/frontend/js/: chat.js  text.js
Chatbox5.0/proto/: chat.proto
Chatbox5.0/wasm/: wasm_crypto_bg.wasm
Chatbox5.0/wasm/wasm-crypto/: Cargo.toml
Chatbox5.0/wasm/wasm-crypto/pkg/: package.json  wasm_crypto.d.ts  wasm_crypto.js  wasm_crypto_bg.wasm.d.ts
Chatbox5.0/wasm/wasm-crypto/src/: lib.rs
chatbox3.0/: chat.proto  chat_pb2.py  server.py  客户端.xmind  聊天室.html
