[package]
name = "wasm-crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2"
aes = "0.8"
cbc = { version = "0.1.2", features = ["std", "alloc"] }
cipher = { version = "0.4", features = ["alloc"] }
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
